hphp/hack/test/typecheck/control_flow/do_def_after_break.php.exp
File "do_def_after_break.php", line 10, characters 10-11:
Variable $x is undefined, or there exists at least one control flow path reaching this point which does not define $x. (Naming[2050])
